# MBBO

./: Diary.txt  Kernels - best MLL.txt  Makefile  README.md  pyproject.toml
mbbo/: acquisition.py  functions.py  kernels.py  output.py  test_gaussian.py  test_runner.py
notebooks/: 0.01-mw-explore.ipynb  0.02-mw-calibrate.ipynb  0.02-mw.ipynb  Function_1.csv  Function_2.csv  Function_3.csv  Function_4.csv  Function_5.csv  Function_6.csv  Function_7.csv  explore.xlsx  out.csv  output.py
